[gd_scene load_steps=10 format=3 uid="uid://n0ei1kyivb23"]

[ext_resource type="Script" path="res://script/pause.gd" id="1_owrvu"]
[ext_resource type="FontFile" uid="uid://b48n1o88y7scp" path="res://assets/font/MotionControl-Bold.otf" id="1_sgsmr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ljyib"]
bg_color = Color(0.121569, 0.121569, 0.121569, 0.94902)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mn0dp"]
bg_color = Color(0.33288, 0.332881, 0.332881, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gx2iw"]
bg_color = Color(0.230315, 0.230315, 0.230315, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l748f"]
bg_color = Color(0.317647, 0.34902, 0.188235, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_05750"]
bg_color = Color(0.168627, 0.188235, 0.0901961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1euog"]
bg_color = Color(0.32549, 0.180392, 0.101961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wwswr"]
bg_color = Color(0.211765, 0.109804, 0.054902, 1)

[node name="Pause" type="CanvasLayer"]
script = ExtResource("1_owrvu")

[node name="OverlayPanel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -341.0
offset_top = -189.5
offset_right = 341.0
offset_bottom = 189.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ljyib")

[node name="Label" type="Label" parent="OverlayPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 10.0
offset_bottom = 111.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_sgsmr")
theme_override_font_sizes/font_size = 100
text = "PAUSE"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="OverlayPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -197.0
offset_top = -256.0
offset_right = 197.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20

[node name="CloseButton" type="Button" parent="OverlayPanel/VBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_sgsmr")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_mn0dp")
theme_override_styles/normal = SubResource("StyleBoxFlat_gx2iw")
text = "Resume"

[node name="TutorialButton" type="Button" parent="OverlayPanel/VBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_sgsmr")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_l748f")
theme_override_styles/normal = SubResource("StyleBoxFlat_05750")
text = "Tutorial"

[node name="ExitButton" type="Button" parent="OverlayPanel/VBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_sgsmr")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_1euog")
theme_override_styles/normal = SubResource("StyleBoxFlat_wwswr")
text = "Exit"

[connection signal="pressed" from="OverlayPanel/VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="OverlayPanel/VBoxContainer/TutorialButton" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="OverlayPanel/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
